fix: branding txt alignment

--- a/src/components/Tabs/tabs.css
+++ b/src/components/Tabs/tabs.css
@@ -55,7 +55,7 @@
 .lil-capsule-tabs {
     /* for capsule shape */
     border-radius: 1000px;
-    @apply lil-bg-grey-425 lil-h-full lil-flex;
+    @apply lil-bg-grey-425 lil-h-full lil-flex lil-overflow-x-auto;
 }
 .lil-capsule-tabs .lil-capsule-tab {
     /* for capsule shape */
@@ -64,4 +64,12 @@
 }
 .lil-capsule-tabs .lil-capsule-tab-active {
     @apply lil-bg-blue-350 lil-text-white lil-flex lil-items-center lil-h-full;
+}
+@screen sm {
+    .lil-capsule-tabs {
+        border-radius: 0;
+    }
+    .lil-capsule-tabs .lil-capsule-tab {
+        min-width: 200px;
+    }
 }
